<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Agenda3</string>
    <string name="sub_title">Organize your life</string>
    <string name="todayIs">Today is...</string>
    <string name="my_tasks">My tasks</string>
    <string name="calendar">Calendar</string>
    <string name="add_task">Add task</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="changeLanguage">Change language</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_Name">Edit name</string>
    <string name="night_mode">Night mode</string>
    <string name="change_text_size">Change test size</string>
    <string name="about_us">About us</string>
    <string name="name_task">Task name</string>
    <string name="date_task">Date</string>
    <string name="complete_task">Complete</string>
    <string name="add_new_task">Add</string>
    <string name="fail">Failed</string>
    <string name="add_sucess">Add successfully</string>
    <string name="update">Update successfully</string>
    <string name="delete_sucess">Delete successfully</string>
    <string name="no_data">No data</string>
    <string name="back_to_tasks">Back to task list</string>
    <string name="edit_task">Edit Task</string>
    <string name="update_task">Update</string>
    <string name="delete_button">Delete</string>
    <string name="confirm_delete">Do you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>