<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:onClick="back_home"
            android:padding="14dp"
            android:src="@drawable/back_icon"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/user_icon"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="User"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/round_back_icon"
                android:text="@string/edit_Name"
                android:textAllCaps="false"/>

            <LinearLayout
                android:background="@drawable/round_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp">
<!--Night Mode-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nightMode"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_back_icon"
                    android:padding="12dp"
                    android:src="@drawable/night_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/night_mode"
                    android:textStyle="bold"
                    android:layout_toEndOf="@+id/nightMode"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:switchMinWidth="50dp"
                    android:theme="@style/nightModeSwitch"
                    android:id="@+id/switchTheme"/>

            </RelativeLayout>
<!--Change Size-->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/changeTextSize"
                        android:src="@drawable/text_size_icon"
                        android:background="@drawable/round_back_icon"
                        android:padding="12dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/change_text_size"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/changeTextSize"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/forward_icon" />

                </RelativeLayout>
<!--Change Language-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/changeLanguage"
                        android:src="@drawable/language_icon"
                        android:background="@drawable/round_back_icon"
                        android:padding="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/changeLanguage"
                    android:text="@string/changeLanguage"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/forward_icon" />

                </RelativeLayout>
<!--About Us-->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/aboutUs"
                        android:src="@drawable/info_icon"
                        android:background="@drawable/round_back_icon"
                        android:padding="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/aboutUs"
                    android:text="@string/about_us"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forward_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                </RelativeLayout>



            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>